--- a/Lab01/index.html
+++ b/Lab01/index.html
@@ -48,31 +48,19 @@ function startGL()
   
   //Opis sceny 3D, położenie punktów w przestrzeni 3D w formacie X,Y,Z 
   let vertexPosition = [
-  //Top
-    -0.1, +1.0, +1.0,  +0.0, +1.5, +1.0,  +1.0, +1.0, +1.0, //3 punkty po 3 składowe - X1,Y1,Z1, X2,Y2,Z2, X3,Y3,Z3 - 1 trójkąt
-    -1.0, +1.0, +1.0,  +0.0, +1.0, +1.0,  +0.0, +1.5, +1.0,
-  //Left
-    // -1.0, -1.0, +1.0,  -1.0, +1.0, +1.0,  -1.0, -1.0, +1.0,
-    // -1.0, -1.0, -1.0,  -1.0, +1.0, +1.0,  -1.0, +1.0, +1.0,
-  // //Right
-    // +0.0, +1.0, +1.0,  +1.0, -1.0, +1.0,  +0.0, -1.0, -1.0,
-  //   +1.0, +1.0, +1.0,  +1.0, -1.0, -1.0,  +1.0, +1.0, -1.0,
-  // //Front
-  //   +1.0, -1.0, +1.0,  +1.0, +1.0, +1.0,  -1.0, -1.0, +1.0,
-  //   -1.0, +1.0, +1.0,  -1.0, -1.0, +1.0,  +1.0, +1.0, +1.0,
-  // //Back
-  //   +1.0, +1.0, -1.0,  +1.0, -1.0, -1.0,  -1.0, -1.0, -1.0,
-  //   +1.0, +1.0, -1.0,  -1.0, -1.0, -1.0,  -1.0, +1.0, -1.0,
-  // //Bottom
-  //   -1.0, -1.0, +1.0,  -1.0, -1.0, -1.0,  +1.0, -1.0, +1.0,
-  //   +1.0, -1.0, +1.0,  -1.0, -1.0, -1.0,  +1.0, -1.0, -1.0
+    -0.5, -1.5, +1.0,  +0.0, -1.5, +1.0,  -0.5, +1.0, +1.0, //3 punkty po 3 składowe - X1,Y1,Z1, X2,Y2,Z2, X3,Y3,Z3 - 1 trójkąt
+     0.0, +1.0, +1.0,  -0.5, +1.0, +1.0,  +0.0, -1.5, +1.0,
+     0.0, +1.0, +1.0,  +1.0, +1.0, +1.0,  +1.0, +0.5, +1.0,
+    +0.0, +1.0, +1.0,  +0.0, +0.5, +1.0,  +1.0, +0.5, +1.0,
+    +0.0, +0.0, +1.0,  +1.0, +0.0, +1.0,  +1.0, -0.5, +1.0,
+    +0.0, -0.5, +1.0,  +1.0, -0.5, +1.0,  +0.0, +0.0, +1.0
   ]
   
   let vertexPositionBuffer = gl.createBuffer(); //Stworzenie tablicy w pamieci karty graficznej
   gl.bindBuffer(gl.ARRAY_BUFFER, vertexPositionBuffer);
   gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertexPosition), gl.STATIC_DRAW);
   vertexPositionBuffer.itemSize = 3; //zdefiniowanie liczby współrzednych per wierzchołek
-  vertexPositionBuffer.numItems = 2; //Zdefinoiowanie liczby punktów w naszym buforze
+  vertexPositionBuffer.numItems = 6; //Zdefinoiowanie liczby punktów w naszym buforze
   
   //Macierze opisujące położenie wirtualnej kamery w przestrzenie 3D
   let aspect = gl.viewportWidth/gl.viewportHeight;
